[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["bezerra <matheus.bezerra@apura.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
